# bedcrock

./: .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  COWORK_INTEGRATION.md  DEPLOYMENT.md  README.md  RESUME_FOR_CLAUDE_CODE.md  alembic.ini  bedcrock-plan-v2.md  bedcrock-plan.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_v2_foundation.py  0003_drop_vault_and_add_v3_tables.py
cowork-prompts/: hourly-closure.md  intraday-light.md  morning-heavy.md  weekly-synthesis.md
deploy/docker/: Dockerfile
deploy/systemd/: ct-api.service  ct-bot.service  ct-eod.service  ct-eod.timer  ct-ingest.service  ct-monitor.service
docs/: AUDIT.md  AUDIT_2026-05-10.md  BROKER_SETUP.md  DEPLOYMENT.md  DISCORD_SETUP.md  ENV.md  V2_IMPLEMENTATION_PLAN.md  V4_ALPACA_PLAN.md
src/: __init__.py  config.py  logging_config.py
src/api/: __init__.py  main.py
src/backtest/: replay.py
src/broker/: __init__.py  alpaca.py  base.py  ibkr.py
src/db/: models.py  session.py
src/discord_bot/: __init__.py  bot.py  webhooks.py
src/indicators/: __init__.py  compute.py
src/ingestors/: __init__.py  base.py  earnings.py  heavy_movement.py  ohlcv.py  quiver.py  sec_edgar.py  unusual_whales.py
src/orders/: __init__.py  builder.py  monitor.py
src/safety/: reconciler.py
src/schemas/: __init__.py
src/scoring/: __init__.py  gates.py  scorer.py
src/vault/: __init__.py  frontmatter.py  writer.py
src/workers/: __init__.py  api_worker.py  bot_worker.py  daily_pnl.py  eod_worker.py  healthcheck.py  ingest_worker.py  monitor_worker.py
tests/: test_backtester.py  test_broker_safety.py  test_config.py  test_daily_pnl.py  test_dashboard.py  test_eod_worker.py  test_gates.py  test_heavy_movement.py  test_imports.py  test_monitor_refactor.py  test_orders.py  test_reconciler_refactor.py  test_scoring.py  test_v2_invariants.py  test_vault.py
tests/broker/: test_alpaca_adapter.py  test_ibkr_trade_updates.py
vault-templates/: Dashboard.md
(+17 files in other folders)
